# mthesis

./: .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  bibliography.bib  chapters.list  cvpresentation.md  index.html  install.sh  meta.yaml  requirements.txt  thesis.latex  topicproposal.md
assets/: README.md  abbreviations.list  bibliography.bib  chapters.list  glossary.tex  math.tex  springer-socpsych-author-date.mod.csl  thesistitlepage.sty
assets/examples/: camera_calib.yml
assets/examples/gaze_simple/: gaze_simple.cpp
assets/examples/pipeline_steps/: new_step.h
assets/examples/simple_gaze_caller/: CMakeLists.txt
assets/gen_files/: bioid_accuracy_vs_error.csv  pexels_accuracy_vs_error.csv  table-comptimes-BioID.md  table-comptimes-pexels.md  table-pipeline-step-times.md  table-pipeline-times.md  table-relative-errors-BioID.md  table-relative-errors-pexels.md
assets/images/: failedprojection.tex
related_materials/: Makefile
scratch/: README.md  eye_center_timm_et_barth.ipynb  head_model.ipynb  model.csv
scratch/BioIDImages/: .gitignore  Makefile  README.md
scratch/OpenCVTest/: CMakeLists.txt  project_undistort.cpp
scratch/caffe-test/: CMakeLists.txt  caffe-test.cpp
scratch/evaluation/: .gitignore  Makefile  README.md  bioid.csv  pexels.csv  pipeline_times.py  predictions_images.py  pupil_accuracies.py  undetected_faces.py
scratch/evaluation/dataacquisition/: README.md  bioid.cpp  pexels.cpp
scratch/evaluation/dataaquisition/: CMakeLists.txt  README.md  bioid.cpp  pexels.cpp
scratch/facebase_data/: .gitignore  Makefile  download.py  extract_data.py
scratch/figures/: Makefile
scratch/figures/pupil_detection_comparison/: Makefile  README.md
scratch/figures/solvePnPcomparison/: Makefile  README.md
scratch/head_models/: head_models.ipynb  model2.csv
scratch/pexels_face_images/: .gitignore  AboutThisData.txt  Makefile  README.md  annotate.py  downloader.py  list.txt  resize.py
scratch/pupil_detection_comparison/: Makefile  compose.sh
scratch/pupildetection/: README.md  compose.sh
scratch/related_materials/: README.md
scratch/solvePnPcomparison/: README.md  compose.sh
src/: abstract.tex  acknowledgements.tex  appendix.md  background.md  conclusion.md  eye_center_localization.md  future_work.md  gaze_library.md  introduction.md  models_and_methods.md  pipeline_d_gaze_point.md  state_of_the_art.md
